[project]
name = "s2-time-series-access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "pystac-client>=0.9.0",
    "shapely>=2.1.2",
]

[tool.uv.workspace]
members = [
    "tlm-kerchunk-nb",
]
