[project]
name = "odc-stac-nb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.30",
    "dask[distributed]>=2026.6.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "odc-stac>=0.5.2",
    "pystac-client>=0.9.0",
    "shapely>=2.1.2",
]
